@@ -1,3 +1,7 @@
+2011-09-27  Chong Yidong  <cyd@stupidchicken.com>
+
+	* emacs-lisp/package.el (list-packages): Fix echo area message.
+
 2011-09-27  Leo Liu  <sdl.web@gmail.com>
 
 	* ido.el (ido-read-internal): Accept cons cell HIST arg.
